# agent-command

./: .env  .env.example  .gitignore  ANALYTICS.md  CLAUDE.md  MANIFEST.in  OPENCLAW_SETUP_AND_MAINTENANCE.md  Procfile  README.md  api_server.py  config.py  graph.py  main.py  memoria.db  pipeline_events.jsonl  pyproject.toml  requirements.txt  state.py
.serena/: project.yml
agents/: __init__.py  base.py  team.py
artifacts/ba942372_eac1b70d/: api_contract.md  architecture.md  data_schema.md  migrations.sql  prd.md  security_audit.md
artifacts/db1e62ce_a3c6fdca/: api_contract.md  architecture.md  data_schema.md  migrations.sql  prd.md  security_audit.md
artifacts/db1e62ce_a3c6fdca/backend/: main.py
artifacts/db1e62ce_a3c6fdca/frontend/: index.html
artifacts/db1e62ce_a3c6fdca/tests/: test_suite.py
disciplined-programmer/skill-package/: SKILL.md
frontend/: __init__.py  app.js  index.html  styles.css
heart/: __init__.py  analytics.py  darwin.py  echo.py  memoria.py
tests/: test_core.py
