[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-command"
version = "0.1.0"
description = "Self-evolving AI software development team — 13 agents that ship production code from plain language intent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "CamelCod" }
]
keywords = ["ai", "agents", "langgraph", "llm", "software-development", "autonomous"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "itsdangerous>=2.2.0",
    "sse-starlette>=2.0.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
]

[project.scripts]
agent-command = "main:main"
agent-server = "api_server:run"

[project.urls]
Homepage = "https://github.com/CamelCod/agent-command"
Repository = "https://github.com/CamelCod/agent-command"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "heart*", "frontend*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
agents = ["py.typed"]
heart = ["py.typed"]
frontend = ["*"]

